fix: correcao links abriam mas nao carregavam

--- a/index.html
+++ b/index.html
@@ -152,17 +152,17 @@
       <div class="footer-conteudo">
         <ul class="redes-sociais" aria-label="Redes sociais">
           <li>
-            <a href="httpss://www.tiktok.com/@loudinhosofc" class="link" aria-label="TikTok da LOUDinhos" target="_blank" rel="noopener noreferrer">
+            <a href="https://www.tiktok.com/@loudinhosofc" class="link" aria-label="TikTok da LOUDinhos" target="_blank" rel="noopener noreferrer">
               <img src="./src/assets/icons/tiktok.svg" alt="Ícone do TikTok" width="28" height="28">
             </a>
           </li>
           <li>
-            <a href="httpss://www.instagram.com/loudinhosofc/" class="link" aria-label="Instagram da LOUDinhos" target="_blank" rel="noopener noreferrer">
+            <a href="https://www.instagram.com/loudinhosofc/" class="link" aria-label="Instagram da LOUDinhos" target="_blank" rel="noopener noreferrer">
               <img src="./src/assets/icons/instagram.svg" alt="Ícone do Instagram" width="28" height="28">
             </a>
           </li>
           <li>
-            <a href="httpss://x.com/loudinhos/" class="link" aria-label="Twitter (X) da LOUDinhos" target="_blank" rel="noopener noreferrer">
+            <a href="https://x.com/loudinhos/" class="link" aria-label="Twitter (X) da LOUDinhos" target="_blank" rel="noopener noreferrer">
               <img src="./src/assets/icons/x.svg" alt="Ícone do X (Twitter)" width="28" height="28">
             </a>
           </li>
