fix: correcao link instagram

--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
             </a>
           </li>
           <li>
-            <a href="https://www.instagram.com/loudinhosofc/" class="link" aria-label="Instagram da LOUDinhos" target="_blank" rel="noopener noreferrer">
+            <a href="https://www.instagram.com/loudinhos/" class="link" aria-label="Instagram da LOUDinhos" target="_blank" rel="noopener noreferrer">
               <img src="./src/assets/icons/instagram.svg" alt="Ícone do Instagram" width="28" height="28">
             </a>
           </li>
